Changed Cards to card-deck layout, NEED TO FIX TEXT WRAP

--- a/style.css
+++ b/style.css
@@ -27,9 +27,8 @@ ul {
 #koren {
     padding-bottom: 30px;
 }
-div.card {
-    display: block;
-}
+
+#koren
 
 #koren img {
     padding: 40px;
